fix css проблему с overflow

--- a/src/pages/Dashboard/TransactionsTable/TransactionsTable.module.css
+++ b/src/pages/Dashboard/TransactionsTable/TransactionsTable.module.css
@@ -26,13 +26,3 @@
   color: #fff;
   width: 33%;
 }
-/* .transactions-table thead,
-.transactions-table tbody {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.transactions-table tbody {
-  height: 100%;
-} */
