--- a/src/pages/Group/GroupInvitations/GroupInvitations.module.css
+++ b/src/pages/Group/GroupInvitations/GroupInvitations.module.css
@@ -1,6 +1,5 @@
 .group-invitations {
   width: 100%;
-  height: 100%;
 }
 
 .group-invitations ul {
