--- a/src/pages/Group/GroupMembers/MembersContainer/MembersContainer.module.css
+++ b/src/pages/Group/GroupMembers/MembersContainer/MembersContainer.module.css
@@ -1,6 +1,5 @@
 .members-container {
   width: 100%;
-  height: 100%;
 }
 
 .members-container ul {
